Fix z-index of container above 55rem

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,7 +32,7 @@ body {
   grid-column-start: content;
   grid-row-start: content;
   padding: 1rem 2rem;
-  
+  position: relative;
   z-index: 0;
   background: var(--container-background-color);
   transition: 0.1s linear background;
@@ -162,7 +162,7 @@ nav ul li {
 nav ul li a {
   text-align: center;
   display: block;
-  padding: 0rem 0.5rem;
+  padding: 0.5rem;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -207,12 +207,17 @@ nav ul li a:hover .vector {
     font-size: 18px;
   }
   
+  .container {
+    z-index: 10;
+  }
+  
   nav {
     grid-column-start: auto;
     position: fixed;
     bottom: 1rem;
     left: 0px;
     right: 0px;
+    z-index: 10;
   }
   
   nav ul {
@@ -464,10 +469,6 @@ ul.connecting-means li a:hover {
   transition: 0.2s ease-out all;
 }
 
-ul.connecting-means li a:hover:after {
-  opacity: 1;
-}
-
 .animation--change-page {
   animation: 1s change-page ease-in-out;
 }
@@ -525,7 +526,7 @@ ul.connecting-means li a:hover:after {
   }
   
   header .brand-title {
-    font-size: 4rem;
+  font-size: 4rem;
     margin-bottom: 2rem;
   }
   
@@ -537,10 +538,22 @@ ul.connecting-means li a:hover:after {
     display: inline-block;
   }
   
+  nav ul li {
+    min-width: auto;
+  }
+  
+  nav ul li a {
+    padding: 0 0.5rem;
+  }
+  
   ul.connecting-means li {
     display: block;
     min-width: 50%;
     float: left;
+  }
+  
+  ul.connecting-means li a:hover:after {
+    opacity: 1;
   }
   
   .work {
